working tts working segments reader